[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "px-proxy"
version = "0.12.0"
description = "An HTTP proxy server to automatically authenticate through an NTLM proxy"
authors = [
  {name = "Ganesh Viswanathan", email = "dev@genotrance.com"}
]
readme = "README.md"
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Win32 (MS Windows)",
        "Environment :: MacOS X",
        "Intended Audience :: Developers",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: System Administrators",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Internet :: Proxy Servers"
]
dependencies = [
    "h11",
    "keyring",
    "keyrings.alt",
    "netaddr",
    "psutil",
    "pymcurl",
    "pyspnego",
    "python-dotenv",
    "quickjs-ng"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/genotrance/px"
Repository = "https://github.com/genotrance/px"
Issues = "https://github.com/genotrance/px/issues"

[project.scripts]
px = "px.main:main"

[project.gui-scripts]
pxw = "px.main:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
    "pytest-httpbin",
    "pytest-cov",
    "pre-commit>=4.5.1",
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "psutil>=7.2.2",
]

[tool.setuptools]
packages = ["px"]

[tool.tox]
envlist = ["py310", "py311", "py312", "py313", "py314", "binary"]

[tool.tox.env_run_base]
commands_pre = [["uv", "pip", "install", "keyring", "keyrings.alt", "psutil", "pytest", "pytest-cov", "pytest-xdist", "pytest-httpbin"]]
commands = [["pytest", "-n", "auto", "tests"]]
passenv = ["DBUS_SESSION_BUS_ADDRESS", "UV_PYTHON_PREFERENCE", "PX_CI_MINIMAL"]

[tool.tox.env.binary]
passenv = ["PXBIN", "DBUS_SESSION_BUS_ADDRESS", "PX_CI_MINIMAL"]

[tool.mypy]
files = ["px"]
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
disable_error_code = ["union-attr", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: Docker-based integration tests (require docker, run with: pytest -m integration)",
    "benchmark: Concurrency benchmark tests (run with: pytest -m benchmark)",
    "largedata: Large data transfer reliability tests (run with: pytest -m largedata)",
]
addopts = "-m 'not integration and not benchmark and not largedata'"

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E", "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# S101: assert in tests; F405: star imports for pytest fixtures; S105/S107: test credentials; S602/S605: shell=True for test infrastructure
"tests/*" = ["F405", "S101", "S105", "S107", "S602", "S605"]
# C901: generate_config complexity; TRY003: long exception messages
"tests/test_config.py" = ["C901", "TRY003"]
# TRY003: long exception messages in test helpers
"tests/test_debug.py" = ["TRY003"]
# S603/S607: docker subprocess calls in integration tests
"tests/test_kerberos.py" = ["S603", "S607"]
# SIM115: logfile lifecycle managed by caller
"tests/helpers.py" = ["SIM115"]
# C901: complex functions
"px/config.py" = ["C901"]
# E402: import after monkey-patch; C901: complex async connection handler; S104: fallback address for logging; S110: intentional cleanup; S324: md5 required by HTTP digest auth; SIM103: keep-alive readability
"px/handler.py" = ["E402", "C901", "S104", "S110", "S324", "SIM103"]
# S603/S607: kinit/klist subprocess calls
"px/kerberos.py" = ["S603", "S607"]
# C901: complex test function
"px/main.py" = ["C901"]
# SIM115: file lifecycle managed externally
"px/debug.py" = ["SIM115"]
# SIM115: stdout redirection lifecycle managed externally
"px/windows.py" = ["SIM115"]
# C901: complex Windows proxy detection functions
"px/wproxy.py" = ["C901"]
# Build script: subprocess/shell commands, complex functions
"tools.py" = ["C901", "S602", "S605", "S607"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["px"]
